(feat): get team settings endpoint
Добавил эндпоинт для получения настроек команд.
Обновил эндпоинты для получения команд и студентов, чтобы выдавались имена вместе с айди
